2014-09-18  Kan-Ru Chen  <kanru@kanru.info>

	* window.el (fit-window-to-buffer): When counting buffer width,
	count the whole visible buffer.  Correctly convert the body-height
	to pixel size for window-text-pixel-size (Bug#18498).

2014-09-14  Glenn Morris  <rgm@gnu.org>

	* image.el (image-multi-frame-p): Fix thinko - do not force
	a delay if none was specified.  (Bug#18334)

2014-09-12  Kan-Ru Chen  <kanru@kanru.info>

	* window.el (fit-window-to-buffer): Doc fix.

2014-09-10  Ivan Shmakov  <ivan@siamics.net>  (tiny change)

	* desktop.el (desktop-create-buffer): Check that buffers are still live
	before burying them (bug#18373).

2014-09-09  Glenn Morris  <rgm@gnu.org>

	* calendar/diary-lib.el (diary-list-entries):
	Restore 24.3 display behavior.  (Bug#18381)

2014-09-09  Eli Zaretskii  <eliz@gnu.org>

	* mouse.el (mouse-drag-line): On text-mode frames, count the mode
	line and header line as 1 pixel.  This fixes the 1-"pixel" (row)
	discrepancy between window-pixel-edges and mouse events, and
	avoids moving mode line up when the mouse click is on the modeline
	and no drag is attempted.

2014-09-08  Glenn Morris  <rgm@gnu.org>

	* calendar/calendar.el (calendar-basic-setup):
	Avoid clobbering calendar with diary.  (Bug#18381)

2014-09-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc/vc-dir.el (vc-dir-update): Don't burp in corner case.

2014-09-04  Lars Ljung  <lars@matholka.se>  (tiny change)

	* isearch.el (isearch-yank-word-or-char): Obey superword-mode
	as well (bug#18400).

2014-09-04  Eli Zaretskii  <eliz@gnu.org>

	* subr.el (posn-actual-col-row): Doc fix.  (Bug#18385)

2014-09-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/package.el (package-generate-description-file):
	Properly quote the arguments (bug#18332).  Change second arg.
	(package--alist-to-plist-args): Rename from package--alist-to-plist and
	quote the elements.
	(package--make-autoloads-and-stuff): Fix the test for pre-existence of